Add input files and conversion code.